test/trivial/deitz/test_use_before_def2.good
Error: Variable 'x' used before defined (test_use_before_def2.chpl:2)
